remove daily admissions chart from Wales

--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -52,6 +52,9 @@ cards:
       excluded: 
         areaType:
           - overview
+          - nation
+        areaName:
+          - Wales
       
     fullWidth: true
     abstract: >
