--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -52,13 +52,8 @@ cards:
       excluded: 
         areaType:
           - overview
-      included:
         areaName:
-          - England
-          - Scotland
-          - Northern Ireland
-        areaType:
-          - nation
+          - Wales
         
       
     fullWidth: true
