--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -52,9 +52,11 @@ cards:
       excluded: 
         areaType:
           - overview
+      included:
         areaName:
-          - Wales
-        
+          - England
+          - Scotland
+          - Northern Ireland
       
     fullWidth: true
     abstract: >
