fix areatype for admissions

--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -50,6 +50,9 @@ cards:
 
     locationAware:
       included:
+        areaType:
+          - nhsRegion
+          - nhsTrust
         areaName:
           - England
           - Scotland
