remove wales demogs chart

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -4990,6 +4990,11 @@ cards:
 
   - heading: Vaccination uptake, by vaccination date age demographics
     cardType: chart
+    locationAware:
+      excluded:
+        areaName:
+          - Wales
+
     experimental: false
 
     fullWidth: true
