--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -545,7 +545,7 @@ cards:
       type: radio
       heading: null
       choices:
-        - All
+        - Cases
         - First episodes
         - Reinfections
 
