change radio button option to 'All cases'
Changed from 'Cases' to 'All cases'

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -545,11 +545,11 @@ cards:
       type: radio
       heading: null
       choices:
-        - Cases
+        - All cases
         - First episodes
         - Reinfections
 
-    Cases:
+    All cases:
 
       tabs:
         - heading: Heatmap
